--- a/Udemy/11-cfn-init/11-06-cfn-init-v6-files.yml
+++ b/Udemy/11-cfn-init/11-06-cfn-init-v6-files.yml
@@ -50,6 +50,7 @@ Resources:
                 [main]
                 stack=${AWS::StackId}
                 region=${AWS::Region}
+                interval=7
               mode: "000400"
               owner: "root"
               group: "root"
