--- a/Udemy/08-Outputs/TIA-08-02-cfn-ec2-Outputs-Intrinsic-Fn-GetAtt.yaml
+++ b/Udemy/08-Outputs/TIA-08-02-cfn-ec2-Outputs-Intrinsic-Fn-GetAtt.yaml
@@ -1,3 +1,7 @@
+# CloudFormation Ref & GetAtt cheatsheet
+# https://theburningmonk.com/cloudformation-ref-and-getatt-cheatsheet/
+
+
 AWSTemplateFormatVersion: 2010-09-09
 Description: Outputs practice
 
