--- a/Udemy/11-cfn-init/11-13-cfn-init-v13-CreationPolicy.yml
+++ b/Udemy/11-cfn-init/11-13-cfn-init-v13-CreationPolicy.yml
@@ -46,7 +46,7 @@ Resources:
               uid: "501"                              
               homeDir: "/tmp"
           sources:
-            /tmp: "https://s3.us-east-2.amazonaws.com/cfn-init-0189/cfn/demo1.zip"
+            /tmp: "https://artifacts-tia.s3.amazonaws.com/demo1.zip"
           files:
             "/etc/cfn/cfn-hup.conf":
               content: !Sub |
