--- a/Udemy/14-Continuous-Delivery/14-00-All-Roles/14-00-01-EC2-Instance-Profile-Role.yml
+++ b/Udemy/14-Continuous-Delivery/14-00-All-Roles/14-00-01-EC2-Instance-Profile-Role.yml
@@ -1,3 +1,5 @@
+# this role will allow E2 to access S3 bucket and get the Artifact
+
 Resources:
   MyCICDEC2InstanceProfileRole:
     Type: 'AWS::IAM::Role'
