--- a/Udemy/14-Continuous-Delivery/14-01-CFN-EC2-Instance.yml
+++ b/Udemy/14-Continuous-Delivery/14-01-CFN-EC2-Instance.yml
@@ -67,15 +67,15 @@ Resources:
       UserData: 
         Fn::Base64: |  
           #!/bin/bash
-          sudo yum update
-          sudo yum install ruby
-          sudo yum install wget
+          sudo yum -y update
+          sudo yum -y install ruby
+          sudo yum -y install wget
           sudo yum -y erase java-1.7.0-openjdk.x86_64
           sudo yum -y install java-1.8.0-openjdk.x86_64
           sudo yum -y install java-1.8.0-openjdk-devel
           sudo yum -y install tomcat8
           cd /home/ec2-user
-          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
+          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install 
           chmod +x ./install
           sudo ./install auto      
 
@@ -95,9 +95,9 @@ Resources:
       UserData: 
         Fn::Base64: |  
           #!/bin/bash
-          sudo yum update
-          sudo yum install ruby
-          sudo yum install wget
+          sudo yum -y update
+          sudo yum -y install ruby
+          sudo yum -y install wget
           sudo yum -y erase java-1.7.0-openjdk.x86_64
           sudo yum -y install java-1.8.0-openjdk.x86_64
           sudo yum -y install java-1.8.0-openjdk-devel
