--- a/Udemy/14-Continuous-Delivery/14-04-CFN-CI-CD-CodeDeploy-Deployment.yml
+++ b/Udemy/14-Continuous-Delivery/14-04-CFN-CI-CD-CodeDeploy-Deployment.yml
@@ -10,7 +10,7 @@ Parameters:
   ArtifactStoreS3Location:
     Type: String
     Description: Name of the S3 bucket to store CodePipeline artificat.
-    Default: rest-apps
+    Default: artifact-tia-ohio-us-east-2
 
 Resources:
   CodeBuildRole:
