--- a/Udemy/Code/ccdemo/buildspec.yml
+++ b/Udemy/Code/ccdemo/buildspec.yml
@@ -19,7 +19,8 @@ artifacts:
   files:
     - 'target/ccdemo.war' # This will create a folder called target and put the war file in.
     - 'appspec.yml'
-    - 'scripts/before_install.sh'
+    - 'scripts/before_install.sh' 
     - 'scripts/after_install.sh'    
     - 'scripts/start_server.sh'
     - 'scripts/stop_server.sh'    
+    # this will create a folder called scripts and put all the scripts in. the zip file will content the appspec, the war and all the scripts needed to run deploy the application.
