--- a/test.yaml
+++ b/test.yaml
@@ -1,79 +1,13 @@
-AWSTemplateFormatVersion: 2010-09-09
-Description: Create CodeBuild Stack Template
-
-Parameters:
-  ApplicationRepoName:
-    Type: String
-    Description: Name of the repo which contains Rest Application.
-    Default: ccdemo
-  ArtifactStoreS3Location:
-    Type: String
-    Description: Name of the S3 bucket to store CodePipeline artificat.
-    Default: artifact-tia-ohio-us-east-2
-
-Resources:
-  CodeBuildRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      RoleName:
-        Fn::Sub: CodeBuildRole-${AWS::StackName}
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service:
-                - "codebuild.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      Path: /service-role/
-      Policies:
-        - PolicyName: "CodeBuildCICDAccessPolicy"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: "Allow"
-                Action:
-                  - "codecommit:GitPull"
-                Resource:
-                  - Fn::Sub: arn:aws:codecommit:${AWS::Region}:${AWS::AccountId}:${ApplicationRepoName}
-              - Effect: "Allow"
-                Action:
-                  - "logs:CreateLogGroup"
-                  - "logs:CreateLogStream"
-                  - "logs:PutLogEvents"
-                Resource:
-                  - Fn::Sub: arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/*
-              - Effect: "Allow"
-                Action:
-                  - "s3:PutObject"
-                  - "s3:GetObject"
-                  - "s3:GetObjectVersion"
-                  - "s3:ListBucket"
-                Resource:
-                  - Fn::Sub: arn:aws:s3:::codepipeline-${AWS::Region}-*
-                  - Fn::Sub: arn:aws:s3:::${ArtifactStoreS3Location}/*
-                  - Fn::Sub: arn:aws:s3:::${ArtifactStoreS3Location}
-
-  BuildRestAppCFNProject:
-    Type: AWS::CodeBuild::Project
-    Properties:
-      Name: !Sub BuildRestAppCFN-${AWS::StackName}
-      Description: Build war file for rest application
-      ServiceRole: !GetAtt [ CodeBuildRole, Arn ]
-      Artifacts:
-        Type: S3 
-        Location: !Ref ArtifactStoreS3Location 
-        Name: !Sub BuildRestAppCFN-${AWS::StackName}
-      Environment:
-        Type: LINUX_CONTAINER
-        ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:3.0
-      Source:
-        Location: !Sub https://git-codecommit.us-east-2.amazonaws.com/v1/repos/${ApplicationRepoName}
-        # https://git-codecommit.us-east-2.amazonaws.com/v1/repos/ccdemo
-        Type: CODECOMMIT # or S3
-      TimeoutInMinutes: 15 
-      Tags:
-        - Key: Name
-          Value: !Sub BuildRestAppCFN-${AWS::StackName}
+# User data for North Virginia
+#!/bin/bash
+yum -y update
+yum install -y ruby
+yum install -y aws-cli
+yum install wget
+cd /home/ec2-user
+ 
+wget https://aws-codedeploy-us-east-1.s3.us-east-1.amazonaws.com/latest/install
+ 
+sudo chmod +x ./install
+sudo ./install auto
+sudo service codedeploy-agent start
